# face-recognition-cpp-tensorrt

./: CMakeLists.txt  config.json
src/: arcface-ir50.cpp  arcface-ir50.h  main.cpp  retinaface.cpp  retinaface.h  utils.cpp  utils.h
